给总结添加了别名

--- a/templates/日计划.md
+++ b/templates/日计划.md
@@ -10,21 +10,15 @@
 	.action{$ng_duration := (toDate "2006-01-02" "2020-12-28").Sub now}
 	.action{$weekhours:=mul 7 24}
 	.action{$duration:=sub 0 $ng_duration.Hours }
-	.action{$week := div $duration $weekhours}
+	.action{$weeks := div $duration $weekhours}
 	.action{$today:= (now | date "2006-01")}
-	.action{$weekResult:= (list $today "Week" $week| join " ")}
+	.action{$weekResult:= (list $today "Week" $weeks| join " ")}
 
 
 
 
-.action{/*大致估算编辑的字数*/}
-	.action{$yesterday := now | date_modify "-24h" | date "20060102150405"}
-	.action{$words:=0}
-	.action{$words_block := (queryBlocks "SELECT * FROM blocks WHERE ( updated >'?' or created >'?') order by path limit -1" $notebox $yesterday  $yesterday  )}
-	.action{range $v:= $words_block}
-		.action{$words =add $words (len $v.Content) }
-	.action{end}
 
+.action{$dayleft := (div ((toDate "2006-01-02" "2022-01-01").Sub now).Hours 24)}
 .action{$week := add (mod (div ((toDate "2006-01-02" "2050-03-13").Sub now).Hours 24) 7) 1}
 
 {{{col
@@ -32,7 +26,7 @@
 🕐 创建时间：.action{now | date "2006-01-02 15:04"} .action{last (slice (list "星期六" "星期五" "星期四" "星期三" "星期二" "星期一" "星期天") 0 $week )}
 }}}
 {{{row
-👍昨天你一共编辑了 **.action{$words}** 字
+距离 `2022-01-01` 还剩 `.action{$dayleft}` 天，加油！
 }}}
 {: style="color: var(--b3-card-info-color); background-color: var(--b3-card-info-background);"}
 }}}
@@ -78,7 +72,7 @@
 
 {{{row
 ## ✍今日总结
-{: name=".action{now | date "2006-01-02"}"}
+{: alias=".action{now | date "2006-01"} Week .action{$weeks}" name=".action{now | date "2006-01-02"}"}
 
 -
 
@@ -97,8 +91,6 @@
 .action{$dayleft := (div ((toDate "2006-01-02" "2022-01-01").Sub now).Hours 24)}
 ## 🚴 随机复习
 
-> 距离 `2022-01-01` 还剩 `.action{$dayleft}` 天，加油！
->
 
 {{SELECT * FROM blocks where type = 'd' and root_id != '.action{.id}' and path not like '%daily%' ORDER BY random() LIMIT 1}}
 
