--- a/templates/周总结.md
+++ b/templates/周总结.md
@@ -59,4 +59,8 @@
 }}}
 
 ### 日总结汇总
-{{SELECT * from blocks where type='h' and  content = '✍今日总结'}}
+{{SELECT * from blocks where type='h' and  content = '✍今日总结' and alias='.action{$weekResult}' }}
+
+### 一周总结
+-
+---
