修改获取第几周函数

--- a/templates/一周/日计划.md
+++ b/templates/一周/日计划.md
@@ -7,10 +7,10 @@
 .action{end}
 
 .action{/*获取当前是第几周*/}
-	.action{$ng_duration := (toDate "2006-01-02" "2020-12-28").Sub now}
+	.action{$ng_duration := (toDate "2006-01-02" "2021-12-26").Sub now}
 	.action{$weekhours:=mul 7 24}
 	.action{$duration:=sub 0 $ng_duration.Hours }
-	.action{$weeks := add (div (div (now.Sub (toDate "2006-01-02" "2020-12-27")).Hours 24) 7) 1}
+	.action{$weeks := add (div (div (now.Sub (toDate "2006-01-02" "2021-12-26")).Hours 24) 7) 1}
 	.action{$today:= (now | date "2006-01")}
 	.action{$weekResult:= (list $today "Week" $weeks| join " ")}
 
@@ -18,7 +18,7 @@
 
 
 
-.action{$dayleft := (div ((toDate "2006-01-02" "2022-01-01").Sub now).Hours 24)}
+.action{$dayleft := (div ((toDate "2006-01-02" "2023-01-01").Sub now).Hours 24)}
 .action{$week := add (mod (div ((toDate "2006-01-02" "2050-03-13").Sub now).Hours 24) 7) 1}
 
 {{{col
@@ -26,7 +26,7 @@
 🕐 创建时间：.action{now | date "2006-01-02 15:04"} .action{last (slice (list "星期六" "星期五" "星期四" "星期三" "星期二" "星期一" "星期天") 0 $week )}
 }}}
 {{{row
-距离 `2022-01-01` 还剩 `.action{$dayleft}` 天，加油！
+距离 `2023-01-01` 还剩 `.action{$dayleft}` 天，加油！
 }}}
 {: style="color: var(--b3-card-info-color); background-color: var(--b3-card-info-background);"}
 }}}
@@ -88,10 +88,10 @@
 ---
 
 
-.action{$dayleft := (div ((toDate "2006-01-02" "2022-01-01").Sub now).Hours 24)}
+.action{$dayleft := (div ((toDate "2006-01-02" "2023-01-01").Sub now).Hours 24)}
 ## 🚴 随机复习
 
 
-{{SELECT * FROM blocks where type = 'd' and root_id != '.action{.id}' and path not like '%daily%' ORDER BY random() LIMIT 1}}
+{{SELECT * FROM blocks where type = 'd' and root_id != '.action{.id}' and path not like '%dailynote%' ORDER BY random() LIMIT 1}}
 
 
