🐞 fix(日计划): dayleft

--- a/templates/一周/日计划.md
+++ b/templates/一周/日计划.md
@@ -18,7 +18,9 @@
 
 
 
-.action{$dayleft := (div ((toDate "2006-01-02" "2023-01-01").Sub now).Hours 24)}
+.action{ $nextYear := now.Year | add 1 }
+.action{ $nextYearStart := $nextYear | printf "%d-01-01" | toDate "2006-01-02" }
+.action{ $dayleft := (div (($nextYearStart).Sub now).Hours 24) }
 .action{$week := add (mod (div ((toDate "2006-01-02" "2050-03-13").Sub now).Hours 24) 7) 1}
 
 {{{col
@@ -26,7 +28,7 @@
 🕐 创建时间：.action{now | date "2006-01-02 15:04"} .action{last (slice (list "星期六" "星期五" "星期四" "星期三" "星期二" "星期一" "星期天") 0 $week )}
 }}}
 {{{row
-距离 `2023-01-01` 还剩 `.action{$dayleft}` 天，加油！
+距离 `.action{ $nextYearStart.Year }-01-01` 还剩 `.action{$dayleft}` 天，加油！
 }}}
 {: style="color: var(--b3-card-info-color); background-color: var(--b3-card-info-background);"}
 }}}
